Fix unvisited links being green in dark mode

--- a/root/style.css
+++ b/root/style.css
@@ -21,7 +21,7 @@ body {
     color: light-dark(var(--black), var(--white));
 }
 
-a {
+a:not(:visited) {
     color: light-dark(blue, #00ff00);
 }
 
